--- a/client/index.html
+++ b/client/index.html
@@ -15,7 +15,8 @@
 <body>
   <div class="header">
     <div class="cell">
-      <h1 class="logo">Olympic Games</h1>
+      <h1 class="logo">Odia Olympic Games</h1>
+        <h3>I said it's Odia Olympic Gams</h3>
     </div>
   </div>
 
