--- a/client/index.html
+++ b/client/index.html
@@ -16,7 +16,7 @@
   <div class="header">
     <div class="cell">
       <h1 class="logo">Odia Olympic Games</h1>
-        <h3>I said it's Odia Olympic Gams</h3>
+        <h3>I said it's Odia Olympic Games</h3>
     </div>
   </div>
 
